.kubernetes/api/api-deployment.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "api"
  labels:
    app: "api"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "api"
  template:
    metadata:
      labels:
        app: "api"
    spec:
      restartPolicy: Always
      containers:
      - name: api
        image: api
        ports:
        - containerPort: 8000
          name: api
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
