.kubernetes/api/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  annotations:
    cloud.google.com/backend-config: '{"ports": {"80":"global-backendconfig"}}'
    cloud.google.com/neg: '{"ingress": true}'
  labels:
    app: api
spec:
  selector:
    app: api
  type: ClusterIP
  ports:
  - name: api
    protocol: TCP
    port: 80
    targetPort: 8000
